[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MenuPausa.gd" type="Script" id=1]
[ext_resource path="res://Scenes/OpcionesVolumen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/Dialogo.tres" type="Theme" id=3]

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.34902, 0.309804, 0.309804, 0.772549 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 675.0
margin_top = 269.0
margin_right = 764.0
margin_bottom = 451.0

[node name="Pausado" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 89.0
margin_bottom = 37.0
theme = ExtResource( 3 )
text = "Pausa"
align = 1

[node name="ControlSeparador" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 89.0
margin_bottom = 41.0

[node name="Continuar" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 89.0
margin_bottom = 76.0
theme = ExtResource( 3 )
text = "Continuar"

[node name="ControlSeparador2" type="Label" parent="CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 80.0
margin_right = 89.0
margin_bottom = 94.0

[node name="Volumen" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 98.0
margin_right = 89.0
margin_bottom = 129.0
theme = ExtResource( 3 )
text = "Volumen"

[node name="ControlSeparador3" type="Label" parent="CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 133.0
margin_right = 89.0
margin_bottom = 147.0

[node name="Salir" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 151.0
margin_right = 89.0
margin_bottom = 182.0
theme = ExtResource( 3 )
text = "Salir"

[node name="OpcionesVolumen" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Volumen" to="." method="_on_Volumen_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Salir" to="." method="_on_Salir_button_down"]
